# openid

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  openid-config.cmake
src/libopenid/: CMakeLists.txt  exception.cpp  exception.hpp  global.hpp  http.hpp  server.cpp  server.hpp  server_internals.hpp  types.idl
src/openid.hpp/: CMakeLists.txt  global  server
src/openidd/: CMakeLists.txt  main.cpp
